--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.2-ubuntu1) precise; urgency=low
+
+  * Ubuntu packaging.
+
+ -- Karol Auguštin <karol@augustin.pl>  Sat, 18 Aug 2012 18:42:11 +0200
+
 azouk-libraries (0.1.2) unstable; urgency=low
 
   * Bugfixes.
