--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+azouk-libraries (0.1.3-2) precise; urgency=low
+
+  * Fix changelog entry.
+
+ -- Karol Auguštin <karol@augustin.pl>  Wed, 05 Dec 2012 01:22:00 +0100
+
 azouk-libraries (0.1.3-1) precise; urgency=low
 
   * New multiplexer.rules provided.
 
- -- Karol Auguštin <karolaug@dell>  Sat, 01 Dec 2012 18:01:38 +0100
+ -- Karol Auguštin <karol@augustin.pl>  Sat, 01 Dec 2012 18:01:38 +0100
 
 azouk-libraries (0.1.2) unstable; urgency=low
 
