--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.3-3) unstable; urgency=low
+
+  * Proper build using Neuro Debian Tools.
+
+ -- Karol Auguštin <karol@augustin.pl>  Wed, 19 Dec 2012 01:03:20 +0100
+
 azouk-libraries (0.1.3-2) precise; urgency=low
 
   * Fix changelog entry.
