--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.3-4) unstable; urgency=low
+
+  * Added mising depency.
+
+ -- Karol Auguštin <karol@augustin.pl>  Sat, 29 Dec 2012 02:16:37 +0100
+
 azouk-libraries (0.1.3-3) unstable; urgency=low
 
   * Proper build using Neuro Debian Tools.
