--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 azouk-libraries (0.1.3-4) unstable; urgency=low
 
-  * Added mising depency.
+  * Added mising dependency.
 
  -- Karol Auguštin <karol@augustin.pl>  Sat, 29 Dec 2012 02:16:37 +0100
 
