--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.3-5) unstable; urgency=low
+
+  * Added link to mxcontrol binary in openbci directory.
+
+ -- Karol Auguštin <karol@augustin.pl>  Fri, 08 Feb 2013 16:44:05 +0100
+
 azouk-libraries (0.1.3-4) unstable; urgency=low
 
   * Added mising dependency.
