--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.4-1) unstable; urgency=high
+
+  * New multiplexer.rules provided.
+
+ -- Karol Auguštin <karol@augustin.pl>  Fri, 06 Jun 2014 12:58:07 +0200
+
 azouk-libraries (0.1.3-6) unstable; urgency=low
 
   * Change source format to 3.0 (quilt).
