--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.4-2) unstable; urgency=high
+
+  * Really provide new multiplexer.rules.
+
+ -- Karol Auguštin <karol@augustin.pl>  Mon, 30 Jun 2014 12:58:15 +0200
+
 azouk-libraries (0.1.4-1) unstable; urgency=high
 
   * New multiplexer.rules provided.
