--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.5-1) unstable; urgency=medium
+
+  * Provide new multiplexer.rules.
+
+ -- Karol Auguštin <karol@augustin.pl>  Sat, 09 Aug 2014 13:39:26 +0200
+
 azouk-libraries (0.1.4-2) unstable; urgency=high
 
   * Really provide new multiplexer.rules.
