--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.7-1) unstable; urgency=medium
+
+  * Provide new multiplexer.rules file.
+
+ -- Karol Auguštin <karol@augustin.pl>  Thu, 21 Aug 2014 16:20:57 +0200
+
 azouk-libraries (0.1.6-1) unstable; urgency=medium
 
   * Provide new multiplexer.rules file.
