--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.8-2) unstable; urgency=medium
+
+  * New multiplexer rules
+
+ -- Alex Khrabrov <alex@mroja.net>  Sat, 28 Dec 2014 19:40:14 +0100
+
 azouk-libraries (0.1.8-1) unstable; urgency=medium
 
   * New multiplexer rules
