--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.8-3) unstable; urgency=medium
+
+  * New multiplexer rules
+
+ -- Alex Khrabrov <alex@mroja.net>  Sun, 18 Jan 2015 12:02:00 +0100
+
 azouk-libraries (0.1.8-2) unstable; urgency=medium
 
   * New multiplexer rules
