--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.10-1) unstable; urgency=medium
+
+  * Do not block Python threads when waiting for multiplexer message
+
+ -- Alex Khrabrov <alex@mroja.net>  Fri, 08 Apr 2016 17:41:06 +0200
+
 azouk-libraries (0.1.9-1) unstable; urgency=medium
 
   * Change mxcontrol symlink location
