--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+azouk-libraries (0.1.10-3) unstable; urgency=medium
+
+  * New packages for Ubuntu 16.04.
+
+ -- Alex Khrabrov <alex@mroja.net>  Tue, 26 Apr 2016 15:00:00 +0100
+
 azouk-libraries (0.1.10-2) unstable; urgency=medium
 
   * New multiplexer rules
